--- a/static/styles.css
+++ b/static/styles.css
@@ -20,3 +20,9 @@ body {
 .hanged-man {
     width: 400px;
 }
+
+.leaderboard h2 {
+    text-align: center;
+    margin-bottom: 0;
+    padding-bottom: 8px;
+}
